Ensure the right rake is used to build the nginx HelperServer

--- a/www/nginx/Portfile
+++ b/www/nginx/Portfile
@@ -163,6 +163,7 @@ variant passenger description {Enable Phusion Passenger} {
     
     post-extract {
       system "/opt/local/bin/gem install passenger --version '${passenger_version}'"
+      system "/opt/local/bin/rake -f /opt/local/lib/ruby/gems/1.8/gems/passenger-${passenger_version}/Rakefile nginx"
     }
     
     configure.args-append   --add-module=${prefix}/lib/ruby/gems/1.8/gems/passenger-${passenger_version}/ext/nginx
